frontend/test/should_fail/inh_003.grg
using inh_model_003;

rule bla { pattern{} replace{} }
